# backend/docs/swagger.json
@@ -259,6 +259,29 @@
                 }
             }
         },
+        "/v1/oauth/google/login": {
+            "get": {
+                "description": "Generate authenticate URL.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "generate authenticate URL.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/token/renew": {
             "post": {
                 "security": [
